fdo#71786 : Implemented Glossary folder

1. Glosary folder is imported as Intrograb and exported.
   2. Added unit test case

Reviewed on:
	https://gerrit.libreoffice.org/6825

Conflicts:
	sw/qa/extras/ooxmlexport/ooxmlexport.cxx
	writerfilter/source/filter/ImportFilter.cxx

Change-Id: Ifd51a75a65e030d44d30e02cd7ab51fb088186b3