sw/source/filter/ww8/docxexport.hxx
@@ -210,6 +210,8 @@ private:
     /// Write word/theme/theme1.xml
     void WriteTheme();
 
+    void WriteGlossary();
+
     /// Write customXml/item[n].xml and customXml/itemProps[n].xml
     void WriteCustomXml();
 
